force-app/main/default/objects/GoodwillRequest__c/GoodwillRequest__c.object-meta.xml
<CustomObject>
    <label>Goodwill Request</label>
    <nameField>
        <displayFormat>GW-{000000}</displayFormat>
        <label>Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goodwill Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>