force-app/main/default/objects/GoodwillRequest__c/fields/Goodwill__c.field-meta.xml
<CustomField>
    <fullName>Goodwill__c</fullName>
    <label>Goodwill</label>
    <summarizedField>GoodwillAssignment__c.Goodwill__c</summarizedField>
    <summaryForeignKey>GoodwillAssignment__c.Goodwill_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>