force-app/main/default/objects/GoodwillRequest__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Goodwill Requests</relationshipLabel>
    <relationshipName>Goodwill_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>