force-app/main/default/objects/GoodwillRequest__c/fields/Record_Link__c.field-meta.xml
<CustomField>
    <fullName>Record_Link__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_510, FIND(&apos;/services&apos;,$Api.Partner_Server_URL_510)) &amp;  Project__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Link</label>
    <type>Text</type>
</CustomField>