force-app/main/default/objects/GoodwillRequest__c/fields/Request_Reason__c.field-meta.xml
<CustomField>
    <fullName>Request_Reason__c</fullName>
    <label>Request Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warranty Work</fullName>
            </value>
            <value>
                <fullName>Rework</fullName>
            </value>
            <value>
                <fullName>Transition/Ramp</fullName>
            </value>
            <value>
                <fullName>Skill Gap</fullName>
            </value>
            <value>
                <fullName>Pipeline</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>