force-app/main/default/objects/GoodwillRequest__c/fields/Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours__c</fullName>
    <label>Total Hours</label>
    <summarizedField>GoodwillAssignment__c.Hours__c</summarizedField>
    <summaryForeignKey>GoodwillAssignment__c.Goodwill_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>